--- a/Cribbage/.classpath
+++ b/Cribbage/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/CDC-1.0%Foundation-1.0">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="sprites"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JGameGrid"/>
+	<classpathentry kind="lib" path="dist/lib/JGameGrid.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
